[package]
name = "metabuilder-workflow-plugins"
version = "0.1.0"
edition = "2021"
description = "Rust workflow plugins for MetaBuilder"

[lib]
name = "workflow_plugins"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
